--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -28,7 +28,7 @@
                         <button class="topbar-toggler more"><i class="fas fa-bars"></i></button>
                         <div class="nav-toggle">
                             <button class="btn btn-toggle toggle-sidebar">
-                                <i class="fas fa-bars"></i>
+                                <i class="fas fa-ellipsis-h"></i>
                             </button>
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                 </div>
 
                 <!-- Sidebar -->
-                <div class="sidebar sidebar-style-2">
+                <div class="sidebar sidebar-style-2" data-background-color="">
                     <div class="sidebar-wrapper scrollbar scrollbar-inner">
                         <div class="sidebar-content">
                             {% include 'cup/navigation.twig'  %}
@@ -443,6 +443,11 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="https://github.com/getwebspace/platform" target="_blank">
                                             GitHub
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="https://github.com/getwebspace/platform/wiki" target="_blank">
+                                            Документация
                                         </a>
                                     </li>
                                     <li class="nav-item">
